Modifications on main pic

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
       <div class="section_pic-container">
-        <img src="./assets/profile-pic.png" alt="Nina Profile" />
+        <img src="./assets/dessin.svg" alt="Nina Profile" />
       </div>
       <div class="section_text">
         <p class="section_text_p1">Hello I'm</p>
@@ -78,7 +78,7 @@
       <div class="section-container">
         <div class="section_pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/dessin2.svg"
             alt="profile-pic"
             class="about-pic"
           />
@@ -231,18 +231,6 @@
                   <p>Débutante</p>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Figma</h3>
-                  <p>Débutante</p>
-                </div>
-              </article>
-
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -453,7 +441,7 @@
           src="./assets/arrow.png"
           alt="arrow icon"
           class="icon arrow"
-          onclick="location.href='#projects'"
+          onclick="location.href='#contact'"
         />
       </div>
     </section>
