--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           onclick="location.href='#projects'"
         />
       </div>
-    </section>
+    <!-- </section>
     <br/>
     <section id="projects">
       <p class="section_text_p1">Browse My Recent</p>
@@ -444,7 +444,7 @@
           onclick="location.href='#contact'"
         />
       </div>
-    </section>
+    </section> -->
     <section id="contact">
       <p class="section_text_p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
