ajoue img plus lien

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project-1.jpg"
                 alt="project-1"
                 class="project-img"
               />
@@ -378,7 +378,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://github.com/Nira00066/Quizz.git'"
               >
                 GitHub
               </button>
@@ -390,10 +390,11 @@
               </button>
             </div>
           </div>
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project-2.j"
                 alt="project-2"
                 class="project-img"
               />
@@ -402,7 +403,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://github.com/Nira00066/Les_oiseaux_fach-e.git'"
               >
                 GitHub
               </button>
@@ -414,6 +415,7 @@
               </button>
             </div>
           </div>
+          
           <div class="details-container color-container">
             <div class="article-container">
               <img
