add all picture + lien

--- a/index.html
+++ b/index.html
@@ -415,11 +415,11 @@
               </button>
             </div>
           </div>
-          
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project-3.jpg"
                 alt="project-3"
                 class="project-img"
               />
@@ -428,13 +428,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://www.figma.com/design/PMlJjCE6ryouhArzupZ6a4/Maquet-Project-1?node-id=10-4&t=tByjFcfV6XVeskGV-1'"
               >
-                GitHub
+                Figma
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com'"
+                onclick="location.href='https://www.figma.com/proto/PMlJjCE6ryouhArzupZ6a4/Maquet-Project-1?node-id=10-4&t=tByjFcfV6XVeskGV-1'"
               >
                 Live Demo
               </button>
