--- a/index.html
+++ b/index.html
@@ -382,19 +382,19 @@
               >
                 GitHub
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
 
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.j"
+                src="./assets/project-2.jpg"
                 alt="project-2"
                 class="project-img"
               />
@@ -407,12 +407,12 @@
               >
                 GitHub
               </button>
-              <button
+              <!-- <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
 
