--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.jpg"
+                src="./assets/project-3.png"
                 alt="project-3"
                 class="project-img"
               />
