--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <img src="./assets/dessin.svg" alt="Nina Profile" />
       </div>
       <div class="section_text">
-        <p class="section_text_p1">Hello I'm</p>
+        <p class="section_text_p1">Bonjour , Je m'appelle</p>
         <h1 class="title">Nina Lopez</h1>
-        <p class="section_text_p2">Student developer web</p>
+        <p class="section_text_p2">étudiente en développement web et web mobile.</p>
         <br>
         <div class="btn-container">
           <button
