--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
       <div class="section_pic-container">
-        <img src="./assets/dessin.svg" alt="Nina Profile" />
+        <img src="./assets/dessin.svg" alt="Nina Profil" />
       </div>
       <div class="section_text">
         <p class="section_text_p1">Bonjour , Je m'appelle</p>
@@ -51,8 +51,9 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/resume-1-2024.pdf')"
           >
-            Download CV
+           Télécharger mon CV
           </button>
+          
           <button class="btn btn-color-1" onclick="location.href='#contact'">
             Contact Info
           </button>
@@ -75,8 +76,8 @@
       </div>
     </section>
     <section id="about">
-      <p class="section_text_p1">Get to Know More</p>
-      <p class="title">About Me</p>
+      <p class="section_text_p1">Apprendre à me connaître</p>
+      <p class="title">Qui suis-je ?</p>
       <div class="section-container">
         <div class="section_pic-container">
           <img
