--- a/index.html
+++ b/index.html
@@ -365,8 +365,8 @@
     </section>
     <br />
     <section id="projects">
-      <p class="section_text_p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <p class="section_text_p1">Parcourir mes récents</p>
+      <h1 class="title">Projets</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
