refacto final fr

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </div>
         <div>
           <ul class="menu-links">
-            <li><a href="#about" onclick="toggleMenu()">About</a></li>
+            <li><a href="#about" onclick="toggleMenu()">Qui suis-je ?</a></li>
             <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-            <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-            <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+            <li><a href="#projects" onclick="toggleMenu()">Projets</a></li>
+            <li><a href="#contact" onclick="toggleMenu()">Contactez-moi</a></li>
           </ul>
         </div>
       </div>
@@ -377,7 +377,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Projet Un</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -402,7 +402,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Projet Deux</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -427,7 +427,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Projet trois</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -453,8 +453,8 @@
       </div>
     </section>
     <section id="contact">
-      <p class="section_text_p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <p class="section_text_p1">Contactez-moi</p>
+   
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -478,10 +478,10 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
+            <li><a href="#about">Qui suis-je ?</a></li>
             <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#projects">Projets</a></li>
+            <li><a href="#contact">Contactez-moi</a></li>
           </ul>
         </div>
       </nav>
@@ -491,4 +491,4 @@
   </body>
 </html>
 
-<a href="">Je ne comprends pas comment on l'intergre</a>
+
