--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 
     <section id="experience">
       <p class="section_text_p1">Explorer mes</p>
-      <h1 class="title">expériences</h1>
+      <h1 class="title">Expériences</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">développement frontend</h2>
+            <h2 class="experience-sub-title">Développement frontend</h2>
             <div class="article-container">
               <article>
                 <img
