--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   alt="Experience icon"
                   class="icon"
                 />
-                <h3>Expérience professionnelle</h3>
+                <h3>Expériences professionnelle</h3>
               </div>
               <p>
                 <b> Non-code oct-2024/Aujord'hui </b>
@@ -476,7 +476,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">Qui suis-je ?</a></li>
-            <li><a href="#experience">Experience</a></li>
+            <li><a href="#experience">Expérience</a></li>
             <li><a href="#projects">Projets</a></li>
             <li><a href="#contact">Contactez-moi</a></li>
           </ul>
