--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <nav id="hamburger-nav">
       <div class="logo">Nina Lopez</div>
       <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()"></div>
+        <div class="hamburger-icon" onclick="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
         <div>
           <ul class="menu-links">
             <li><a href="#about" onclick="toggleMenu()">Qui suis-je ?</a></li>
