--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
       <p class="section_text_p1">En savoir plus sur</p>
       <p class="title">Qui suis-je ?</p>
       <div class="section-container">
-        <div class="section_pic-container">
-          <img src="./assets/dessin2.svg" alt="profile-pic" class="about-pic" />
-        </div>
+       
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
@@ -161,7 +159,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Débutante</p>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -193,8 +191,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Débutante</p>
+                  <h3>CSS/SCSS</h3>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -204,7 +202,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Flutter</h3>
+                  <h3>PHP</h3>
                   <p>Débutante</p>
                 </div>
               </article>
@@ -232,17 +230,6 @@
                 />
                 <div>
                   <h3>Visual Studio</h3>
-                  <p>Débutante</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PhotoShop</h3>
                   <p>Débutante</p>
                 </div>
               </article>
@@ -297,7 +284,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Procreat</h3>
+                  <h3>Git</h3>
                   <p>Intermédiaire</p>
                 </div>
               </article>
@@ -313,7 +300,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostSql</h3>
+                  <h3>SQL/NOSQL</h3>
                   <p>Débutante</p>
                 </div>
               </article>
@@ -324,19 +311,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
-                  <p>Débutante</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Java</h3>
+                  <h3>Express</h3>
                   <p>Débutante</p>
                 </div>
               </article>
@@ -362,7 +337,6 @@
         />
       </div>
     </section>
-
     <section id="projects">
       <p class="section_text_p1">Parcourir mes récents</p>
       <h1 class="title">Projets</h1>
