modification"modification from the text"

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <title>Mon Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -45,7 +45,7 @@
         <p class="section_text_p1">Bonjour , Je m'appelle</p>
         <h1 class="title">Nina Lopez</h1>
         <p class="section_text_p2">
-          étudiante en développement web et web mobile.
+          étudiante en Concepteuse Développeuse d'Applications.
         </p>
 
         <div class="btn-container">
@@ -81,7 +81,6 @@
       <p class="section_text_p1">En savoir plus sur</p>
       <p class="title">Qui suis-je ?</p>
       <div class="section-container">
-       
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
@@ -94,14 +93,30 @@
                 <h3>Expériences professionnelle</h3>
               </div>
               <p>
-                <b> Non-code oct-2024/Aujord'hui </b>
+                <b>
+                  Développeuse Full Stack - Sep à Nov 2025 - MyUnispace - Paris
+                </b>
               </p>
-              <p class="details-1">Mise à jour du site web pour Local972</p>
+              <p class="details-1">
+                Développement et mise à jour des maquettes du site mobile sur
+                Figma.
+              </p>
+              <p class="details-1">
+                Collaboration avec l’équipe de développement pour implémenter
+                des améliorations de design responsive sur le site mobile.
+              </p>
 
               <p>
-                <b> sep-2022/dec-2022</b>
+                <b>Photographe Produits - Sep à Déc 2022</b>
               </p>
-              <p class="details-1">Photographe Produits</p>
+              <p class="details-1">
+                Réalisation de plus de 500 photos produits destinées au
+                catalogue en ligne.
+              </p>
+              <p class="details-1">
+                Collaboration avec l’équipe marketing afin de garantir la
+                cohérence visuelle et l’attractivité des visuels de marque.
+              </p>
             </div>
             <div class="details-container">
               <div class="title-container">
@@ -112,9 +127,13 @@
                 />
                 <h3>Formation académique</h3>
               </div>
+              <p><b>2025</b></p>
+              <p class="details-1">Développeuse Web et Web Mobile</p>
               <p><b>2024</b></p>
-              <p class="details-1">Un Bootcamp en développement web.</p>
-
+              <p class="details-1">
+                Préparation Opérationnelle à l’Emploi (POEC) – Développeuse
+                d’Applications Mobiles
+              </p>
               <p><b> 2024</b></p>
               <p class="details-1">Une formation Agile validé</p>
               <p><b>2021 </b></p>
@@ -122,14 +141,20 @@
             </div>
             <div class="text-container">
               <p>
-                Actuellement en transition vers le développement web, je combine
-                ma passion pour la créativité numérique et mon goût pour la
-                technicité. Forte de parcours diversifiés en vente, logistique
-                et artisanat, j'ai acquis des compétences solides en gestion de
-                projet, organisation et précision. Motivée et polyvalente, je
-                souhaite désormais mettre à profit ces atouts pour concevoir des
-                solutions web innovantes et intuitives, tout en continuant à
-                évoluer dans ce secteur en constante transformation.
+                Actuellement à la recherche d’une alternance afin de poursuivre
+                mon parcours en Bachelor Concepteur Développeur d’Applications,
+                je suis une développeuse web déterminée, enthousiaste et
+                toujours motivée par l’apprentissage. Issue d’une formation en
+                développement web et web mobile, j’ai déjà travaillé sur des
+                projets concrets, notamment la réalisation d’une plateforme web
+                ainsi qu’un jeu développé sous Unity. Ces expériences m’ont
+                permis de renforcer mes compétences techniques, en particulier
+                en JavaScript, et de gagner en autonomie. Curieuse, joyeuse et
+                investie, j’aime comprendre comment les choses fonctionnent,
+                relever des défis techniques et m’impliquer pleinement dans les
+                projets auxquels je participe. Je cherche aujourd’hui une
+                alternance qui me permettra de continuer à progresser, à monter
+                en compétences et à évoluer au sein d’une équipe dynamique.
               </p>
             </div>
           </div>
@@ -291,7 +316,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">développement backend</h2>
+            <h2 class="experience-sub-title">Développement backend</h2>
             <div class="article-container">
               <article>
                 <img
@@ -300,7 +325,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SQL/NOSQL</h3>
+                  <h3>SQL</h3>
+                  <p>Intermédiaire</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>NoSQL</h3>
                   <p>Débutante</p>
                 </div>
               </article>
