modification "image of the third pircture"

--- a/index.html
+++ b/index.html
@@ -440,15 +440,15 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.figma.com/design/PMlJjCE6ryouhArzupZ6a4/Maquet-Project-1?node-id=10-4&t=tByjFcfV6XVeskGV-1'"
+                onclick="location.href='https://www.figma.com/design/CVXRlRh1V4tfbzeNycpylI/Novameet?node-id=206-131&t=XlVtEaMA0TfcwQna-1'"
               >
                 Figma
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://www.figma.com/proto/PMlJjCE6ryouhArzupZ6a4/Maquet-Project-1?node-id=10-4&t=tByjFcfV6XVeskGV-1'"
+                onclick="location.href='https://nina.afecdax.ovh/'"
               >
-                Live Demo
+                Live Demo front
               </button>
             </div>
           </div>
