Revise personal statement for clarity and conciseness
Condensed and refined the description of professional experience and motivation for seeking an internship.

--- a/index.html
+++ b/index.html
@@ -141,20 +141,7 @@
             </div>
             <div class="text-container">
               <p>
-                Actuellement à la recherche d’une alternance afin de poursuivre
-                mon parcours en Bachelor Concepteur Développeur d’Applications,
-                je suis une développeuse web déterminée, enthousiaste et
-                toujours motivée par l’apprentissage. Issue d’une formation en
-                développement web et web mobile, j’ai déjà travaillé sur des
-                projets concrets, notamment la réalisation d’une plateforme web
-                ainsi qu’un jeu développé sous Unity. Ces expériences m’ont
-                permis de renforcer mes compétences techniques, en particulier
-                en JavaScript, et de gagner en autonomie. Curieuse, joyeuse et
-                investie, j’aime comprendre comment les choses fonctionnent,
-                relever des défis techniques et m’impliquer pleinement dans les
-                projets auxquels je participe. Je cherche aujourd’hui une
-                alternance qui me permettra de continuer à progresser, à monter
-                en compétences et à évoluer au sein d’une équipe dynamique.
+              Développeuse web en recherche d’alternance pour un Bachelor Concepteur Développeur d’Applications, je suis motivée, autonome et passionnée par l’apprentissage. Ma formation en développement web et web mobile m’a permis de réaliser des projets concrets, dont une plateforme web et un jeu sous Unity, renforçant mes compétences en JavaScript. Curieuse et investie, je souhaite intégrer une équipe dynamique pour continuer à progresser.
               </p>
             </div>
           </div>
